--- a/components/discover.css
+++ b/components/discover.css
@@ -46,7 +46,7 @@
   );
   margin-top: 0.5em;
   content: "";
-  height: 0.1em;
+  height: 1px;
   display: block;
   box-sizing: border-box;
   width: 5em;
@@ -56,6 +56,9 @@
   width: 200px;
 }
 
+.discover-container .discover-slider {
+  cursor: pointer;
+}
 /* .text {
   position: absolute;
   z-index: 999;
