--- a/components/featured.css
+++ b/components/featured.css
@@ -34,6 +34,7 @@
 .featured-header-container .featured-header {
   color: rgb(39, 37, 37);
   font-size: 1.5em;
+  font-family: "Quicksand", sans-serif;
 }
 
 .featured-container .underscore {
