--- a/components/footer.css
+++ b/components/footer.css
@@ -2,6 +2,11 @@ body {
   /* color: #998da0; */
 }
 
+@font-face {
+  font-family: "Madeleina Sans";
+  src: url("/static/Madeleina_Sans.otf") format("opentype");
+}
+
 .footer-rightside-summary {
   max-width: 360px;
   font-size: 1.125rem;
@@ -61,11 +66,13 @@ body {
   text-transform: none;
   letter-spacing: 0;
   font-weight: 700;
+  font-family: "Quicksand", sans-serif;
 }
 
 .menu-list {
   margin-left: -0.75rem;
   font-size: 1rem;
+  font-family: "Quicksand", sans-serif;
 }
 
 .menu-list a {
@@ -85,4 +92,16 @@ body {
   margin-top: 2em;
   padding: 3rem 1.5rem;
   /* background-color: rgb(240, 241, 245); */
+}
+
+.short-story {
+  font-family: "Quicksand", sans-serif;
+}
+
+.copyright {
+  font-family: "Quicksand", sans-serif;
+}
+
+.copyright strong {
+  /* font-family: "Madeleina Sans", sans-serif; */
 }
