--- a/components/discover.css
+++ b/components/discover.css
@@ -31,6 +31,7 @@
 .discover-header {
   color: rgb(39, 37, 37);
   font-size: 1.5em;
+  font-family: "Quicksand", sans-serif;
 }
 
 .discover-header-container {
