--- a/components/food_brewery.css
+++ b/components/food_brewery.css
@@ -72,7 +72,7 @@
 .box .card .details h2 {
   margin: 0;
   padding: 0;
-  font-weight: 600;
+  /* font-weight: 600; */
   font-size: 15px;
   font-family: "Quicksand", sans-serif;
   color: #777;
@@ -80,7 +80,7 @@
 }
 
 .box .card .details h2 span {
-  font-weight: 500;
+  /* font-weight: 500; */
   font-size: 16px;
   color: #f38695;
   display: block;
