--- a/components/footer.css
+++ b/components/footer.css
@@ -30,12 +30,12 @@ body {
 }
 
 .brand-title {
-  font-size: 1.25rem;
-  font-weight: 500;
+  font-size: 2rem;
   color: #463853;
   transition-duration: 172ms;
   will-change: transform;
-  font-weight: 700;
+  font-family: "Quicksand", sans-serif;
+  /* font-weight: 300; */
 }
 
 .brand-subtitle {
@@ -62,7 +62,7 @@ body {
 }
 
 .menu-label {
-  font-size: 1rem;
+  font-size: 1.1rem;
   text-transform: none;
   letter-spacing: 0;
   font-weight: 700;
@@ -71,7 +71,7 @@ body {
 
 .menu-list {
   margin-left: -0.75rem;
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-family: "Quicksand", sans-serif;
 }
 
@@ -96,6 +96,7 @@ body {
 
 .short-story {
   font-family: "Quicksand", sans-serif;
+  font-size: 0.9em;
 }
 
 .copyright {
