--- a/components/trending.css
+++ b/components/trending.css
@@ -55,14 +55,19 @@
   width: 5em;
 }
 
-.facebook-card:hover {
-  transform: scale(1.04);
-  opacity: 1 !important;
+.trending-card:hover {
+  /* transform: scale(1.04); */
+
+  -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(0%);
+  transform: scale(1.1);
+
+  /* opacity: 1 !important; */
   cursor: pointer;
 }
 
-.trending-container .facebook-card {
-  /* cursor: pointer; */
+.trending-container .trending-card {
+  cursor: pointer;
 }
 
 .trending-container .city-title {
