--- a/components/food-brewery.css
+++ b/components/food-brewery.css
@@ -103,8 +103,9 @@
   width: 2em;
 }
 
-.food-brewery-header {
+.food-brewery-header-container .food-brewery-header {
   color: rgb(39, 37, 37);
   font-size: 1.5em;
   font-family: "Quicksand", sans-serif;
+  font-weight: 200;
 }
