--- a/components/popular.css
+++ b/components/popular.css
@@ -187,6 +187,7 @@
   color: rgb(39, 37, 37);
   font-size: 1.5em;
   font-family: "Quicksand", sans-serif;
+  font-weight: 200;
 }
 
 .popular-header-container .underscore {
