--- a/components/popular.css
+++ b/components/popular.css
@@ -32,7 +32,7 @@
 .t1 {
   width: 250px;
   height: 250px;
-  background: url("https://cdn-imgix.headout.com/category/1223/image/3f77a082-970d-43df-bc5d-7e6e301925c6-pompeii.jpg?auto=compress&fm=pjpg&w=480&h=480&crop=faces&fit=min");
+  background: url("https://cdn-imgix.headout.com/category/1303/image/ed686051-e9b8-493c-b0a5-dc27c79a726c-1303.jpeg?auto=compress&fm=pjpg&w=480&h=480&crop=faces&fit=min");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -52,7 +52,7 @@
 .t2 {
   width: 250px;
   height: 250px;
-  background: url("https://cdn-imgix.headout.com/category/1520/image/206de694-146f-4bc9-8fa1-d77074da8b7e-nikita-semerenko-776957-unsplash.jpg?auto=compress&fm=webp&w=480&h=480&crop=faces&fit=min");
+  background: url("https://cdn-imgix.headout.com/category/29/image/379e4fd4-3c83-43a4-b4e7-8422b0356867-NYCCityWalks.jpg?auto=compress&fm=pjpg&w=480&h=480&crop=faces&fit=min");
   background-repeat: no-repeat;
   background-size: cover;
   -webkit-filter: grayscale(50%); /* Safari 6.0 - 9.0 */
@@ -72,7 +72,7 @@
 .t3 {
   width: 250px;
   height: 250px;
-  background: url("https://cdn-imgix.headout.com/category/349/image/49d50732-f94b-4027-9dfd-58891e960a96-hong-kong-city-tour.jpg?auto=compress&fm=pjpg&w=480&h=480&crop=faces&fit=min");
+  background: url("//cdn-imgix.headout.com/category/20/image/50dd86bd-0af8-4fef-a334-94a699d3a67c-NYC101.jpg?auto=compress&fm=pjpg&w=480&h=480&crop=faces&fit=min");
   background-repeat: no-repeat;
   background-size: cover;
   -webkit-filter: grayscale(50%); /* Safari 6.0 - 9.0 */
@@ -92,7 +92,7 @@
 .t4 {
   width: 250px;
   height: 250px;
-  background: url("https://cdn-imgix.headout.com/category/152/abu-dhabi/image/daytour.jpg?auto=compress&fm=pjpg&w=480&h=480&crop=faces&fit=min");
+  background: url("//cdn-imgix.headout.com/category/21/image/f083df8f-c083-4766-b496-bd67cb1199ad-NYCCruises.jpg?auto=compress&fm=pjpg&w=480&h=480&crop=faces&fit=min");
   background-repeat: no-repeat;
   background-size: cover;
   -webkit-filter: grayscale(50%); /* Safari 6.0 - 9.0 */
