--- a/components/filter.css
+++ b/components/filter.css
@@ -9,4 +9,11 @@
   font-weight: 500;
   letter-spacing: 0.0175rem;
   line-height: 0;
+  margin-bottom: 2em;
+}
+
+.filter-container .divider {
+  border-left: 17em solid #f0f0f0;
+  height: 0.01em;
+  margin: 0 auto;
 }
