--- a/components/header.css
+++ b/components/header.css
@@ -1,3 +1,8 @@
+/* .header-container {
+  z-index: 5 !important;
+  position: relative !important;
+} */
+
 .header-container .button {
   font-weight: 700;
   background-color: transparent;
