--- a/components/sub-header.css
+++ b/components/sub-header.css
@@ -1,3 +1,11 @@
+/* .sub-header-container {
+  z-index: 999;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 1307px;
+} */
+
 .sub-header-container .text-sm {
   font-size: 0.875rem;
 }
