--- a/components/trending.css
+++ b/components/trending.css
@@ -44,9 +44,10 @@
 
   -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
   filter: grayscale(0%);
-  transform: scale(1.1);
+  /* transform: scale(1.1); */
+  /* box-shadow: 0 0 8px rgba(0, 0, 0, 0.35); */
 
-  /* opacity: 1 !important; */
+  opacity: 1 !important;
   cursor: pointer;
 }
 
