--- a/components/detail-cart.css
+++ b/components/detail-cart.css
@@ -1,3 +1,8 @@
+.detail-cart-container {
+  position: sticky;
+  top: 0;
+}
+
 .detail-cart-container .cart-button {
   background-color: #ff5a5f;
   color: white;
@@ -27,4 +32,8 @@
 
 .detail-cart-container .f24 {
   font-size: 24px;
+}
+
+.detail-cart-container .sfc3 {
+  color: #00d1b2;
 }
