--- a/components/overview.css
+++ b/components/overview.css
@@ -10,7 +10,7 @@
   color: #424242;
   font-family: Lato, "Helvetica Neue", Arial, Helvetica, sans-serif;
   font-size: 1.4rem;
-  font-weight: 700;
+  font-weight: 500;
   letter-spacing: 0.0175rem;
 }
 
@@ -20,6 +20,10 @@
 
 .overview-container .fw7 {
   font-weight: 700;
+}
+
+.overview-container .fw2 {
+  font-weight: 200;
 }
 
 .overview-container .ellipsis {
