--- a/components/overview.css
+++ b/components/overview.css
@@ -9,11 +9,13 @@
 .overview-container .google {
   color: #424242;
   font-family: Lato, "Helvetica Neue", Arial, Helvetica, sans-serif;
-  font-size: 1.4rem;
-  font-weight: 500;
-  letter-spacing: 0.0175rem;
 }
 
+.overview-container .partner-title {
+  font-size: 1.4rem;
+  font-weight: 700;
+  letter-spacing: 0.0175rem;
+}
 .overview-container .radius20 {
   border-radius: 20px;
 }
@@ -35,4 +37,43 @@
 
 .overview-container .pl0_5 {
   padding-left: 0.5em;
+}
+
+.overview-container .cuisine-title {
+  font-size: 1.2rem;
+  font-weight: 700;
+  letter-spacing: 0.0175rem;
+}
+
+.overview-container .package-tags {
+  justify-content: flex-start;
+}
+
+.overview-container .package-tags {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.overview-container .package-tags li {
+  display: block;
+  border-radius: 20px;
+  border: 1px solid #b2b2b2;
+  font-size: 12px;
+  color: #b2b2b2;
+  padding: 3px 10px;
+  list-style: none;
+  margin: 4px;
+  line-height: 12px;
+  text-align: center;
+  height: 20px;
+  width: auto;
+}
+
+.overview-container .ellipsis {
+  text-overflow: ellipsis;
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
 }
