--- a/components/overview.css
+++ b/components/overview.css
@@ -6,6 +6,10 @@
   font-size: 1.1em;
 }
 
+.overview-container .box {
+  box-shadow: 0 0 0 1px rgba(10, 10, 10, 0.1);
+}
+
 .overview-container .google {
   color: #424242;
   font-family: Lato, "Helvetica Neue", Arial, Helvetica, sans-serif;
@@ -61,7 +65,7 @@
   border-radius: 20px;
   border: 1px solid #b2b2b2;
   font-size: 12px;
-  color: #b2b2b2;
+  color: #333232;
   padding: 3px 10px;
   list-style: none;
   margin: 4px;
@@ -76,4 +80,8 @@
   width: 100%;
   overflow: hidden;
   white-space: nowrap;
+}
+
+.spacer .is-3 {
+  height: 3rem;
 }
