--- a/components/main-list.css
+++ b/components/main-list.css
@@ -177,7 +177,8 @@
 .main-list-container .google {
   color: #424242;
   /* font-family: Google Sans; */
-  font-family: Lato, "Helvetica Neue", Arial, Helvetica, sans-serif;
+  /* font-family: Lato, "Helvetica Neue", Arial, Helvetica, sans-serif; */
+  font-family: Lato, sans-serif !important;
   font-size: 1.3rem;
   font-weight: 500;
   letter-spacing: 0.0175rem;
