overview menu ui done

--- a/components/overview.css
+++ b/components/overview.css
@@ -158,3 +158,119 @@
   margin-top: 3.5em;
   margin-left: 1em;
 }
+
+.cuisine-underscore {
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(rgb(39, 37, 37)),
+    to(#dee5ef)
+  );
+  /* margin-top: 0.2em; */
+  margin-bottom: 0.5em;
+  content: "";
+  height: 1px;
+  display: block;
+  box-sizing: border-box;
+  width: 4em;
+}
+
+.timing-underscore {
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(rgb(39, 37, 37)),
+    to(#dee5ef)
+  );
+
+  margin-bottom: 0.5em;
+  content: "";
+  height: 1px;
+  display: block;
+  box-sizing: border-box;
+  width: 4em;
+}
+
+.about-underscore {
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(rgb(39, 37, 37)),
+    to(#dee5ef)
+  );
+
+  content: "";
+  height: 1px;
+  display: block;
+  box-sizing: border-box;
+  width: 8em;
+}
+
+.menu-underscore {
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(rgb(39, 37, 37)),
+    to(#dee5ef)
+  );
+
+  margin-bottom: 0.7em;
+  content: "";
+  height: 1px;
+  display: block;
+  box-sizing: border-box;
+  width: 2.9em;
+}
+
+.offer-underscore {
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(rgb(39, 37, 37)),
+    to(#dee5ef)
+  );
+
+  content: "";
+  height: 1px;
+  display: block;
+  box-sizing: border-box;
+  width: 7.5em;
+}
+
+.where-underscore {
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(rgb(39, 37, 37)),
+    to(#dee5ef)
+  );
+
+  content: "";
+  height: 1px;
+  display: block;
+  box-sizing: border-box;
+  width: 3.5em;
+}
+
+.rating-underscore {
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(rgb(39, 37, 37)),
+    to(#dee5ef)
+  );
+
+  margin-bottom: 1em;
+  content: "";
+  height: 1px;
+  display: block;
+  box-sizing: border-box;
+  width: 7em;
+}
