--- a/components/food-event-list.css
+++ b/components/food-event-list.css
@@ -1,8 +1,9 @@
 .food-event-list-container .box {
-  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
+  /* box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
   display: block;
   padding: 0.5em;
-  border-radius: 0;
+  border-radius: 0; */
+  box-shadow: 0 0px 0px rgba(10, 10, 10, 0.1), 0 0 0 0px rgba(10, 10, 10, 0.1);
   font-family: "Quicksand", sans-serif;
 }
 
