--- a/components/saloon-package.css
+++ b/components/saloon-package.css
@@ -56,6 +56,14 @@
   font-size: 1.3em;
 }
 
+.saloon-package-container .fs1-1 {
+  font-size: 1.1em;
+}
+
+.saloon-package-container .fs1-2 {
+  font-size: 1.2em;
+}
+
 .saloon-package-container .view-detail {
   /* background-color: #ff3860; */
   /* color: white; */
@@ -89,4 +97,53 @@
 
 .saloon-package-container .package-container .fr {
   float: right;
+}
+
+.saloon-package-container .pl8 {
+  padding-left: 8px !important;
+}
+
+.saloon-package-container .pt0 {
+  padding-top: 0;
+}
+
+.saloon-package-container .package-tag-box {
+  text-align: right;
+  overflow: hidden;
+  /* height: 6em; */
+}
+
+.saloon-package-container .package-tags {
+  justify-content: flex-end;
+}
+
+.saloon-package-container .package-tags {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.saloon-package-container .package-tags li {
+  display: block;
+  border-radius: 20px;
+  /* border: 1px solid #b2b2b2; */
+  font-size: 12px;
+  /* color: #b2b2b2; */
+  color: #333232;
+  background-color: #ece9e9;
+  padding: 3px 10px;
+  list-style: none;
+  margin: 4px;
+  line-height: 12px;
+  text-align: center;
+  height: 20px;
+  width: auto;
+}
+
+.saloon-package-container .ellipsis {
+  text-overflow: ellipsis;
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
 }
