--- a/components/saloon-package.css
+++ b/components/saloon-package.css
@@ -71,10 +71,9 @@
   width: 15em;
   height: 2.3em;
   font-size: 1.4em;
-
   margin-bottom: 0.5em;
-  margin-left: 10em;
-  margin-right: 10em;
+  margin-left: 30%;
+  margin-right: 30%;
 }
 
 .saloon-package-container .package-container .list-title {
