--- a/components/saloon-package.css
+++ b/components/saloon-package.css
@@ -36,6 +36,10 @@
   font-weight: 100;
 }
 
+.saloon-package-container .fw5 {
+  font-weight: 500;
+}
+
 .saloon-package-container .fw7 {
   font-weight: 700;
 }
@@ -66,6 +70,10 @@
 
 .saloon-package-container .fs0-9 {
   font-size: 0.9em;
+}
+
+.saloon-package-container .pr2 {
+  padding-right: 2em;
 }
 
 .saloon-package-container .view-detail {
@@ -184,4 +192,8 @@
 
 .saloon-package-container .ui.accordion .title .dropdown.icon {
   float: right;
+}
+
+.saloon-package-container .mb1 {
+  margin-bottom: 1em !important;
 }
