--- a/components/explore.css
+++ b/components/explore.css
@@ -23,15 +23,54 @@
   margin-top: 1em;
 }
 
-.explore-container .button {
-  background-color: #ff3860;
-  color: white;
+.explore-container .button-previous {
   opacity: 1;
-  width: 17.2em;
+  width: 8em;
   height: 2.5em;
   font-size: 1.4em;
   font-weight: 600;
   margin-bottom: 0.5em;
-  margin-left: 10em;
-  margin-right: 10em;
+  margin-left: 12em;
+}
+
+.explore-container .button-previous-disabled {
+  background-color: #e8c2c9;
+  opacity: 1;
+  width: 8em;
+  height: 2.5em;
+  font-size: 1.4em;
+  font-weight: 600;
+  margin-bottom: 0.5em;
+  margin-left: 12em;
+  pointer-events: none;
+}
+
+.explore-container .button-previous-disabled:hover {
+  background-color: #e8c2c9;
+}
+
+.explore-container .button-next {
+  opacity: 1;
+  width: 8em;
+  height: 2.5em;
+  font-size: 1.4em;
+  font-weight: 600;
+  margin-bottom: 0.5em;
+  margin-left: 1em;
+}
+
+.explore-container .button-next-disabled {
+  background-color: #e8c2c9;
+  opacity: 1;
+  width: 8em;
+  height: 2.5em;
+  font-size: 1.4em;
+  font-weight: 600;
+  margin-bottom: 0.5em;
+  margin-left: 12em;
+  pointer-events: none;
+}
+
+.explore-container .button-next-disabled:hover {
+  background-color: #e8c2c9;
 }
